--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -3,7 +3,7 @@
     ==============
  */
     // import fonts
-    @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
+    @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700,800&display=swap');
     @import url("fonts.css");
 
     // variabel
