--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -2,7 +2,7 @@
      starter pack
     ==============
  */
-@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,700,800&display=swap");
 @import url("fonts.css");
 /* end of starter pack*/
 /*  ==============
@@ -109,6 +109,7 @@ input[type="radio"]:checked + .label:after {
 
 #photo-gallery .item p, #photo-gallery .item li, #video-gallery .item p, #video-gallery .item li, .carousel-modal .item p, .carousel-modal .item li {
   font-size: 14px;
+  font-weight: 500;
 }
 
 #photo-gallery .carousel-wrap, #video-gallery .carousel-wrap, .carousel-modal .carousel-wrap {
@@ -206,6 +207,10 @@ input[type="radio"]:checked + .label:after {
 
 .text-column h4, .text-column h6, .text-column p, .text-column a {
   font-family: "Poppins", sans-serif;
+}
+
+.text-column .title h4, .text-column h6 {
+  font-weight: 700;
 }
 
 @media (min-width: 1201px) {
