--- a/public/css/search.css
+++ b/public/css/search.css
@@ -2,7 +2,7 @@
      starter pack
     ==============
  */
-@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,700,800&display=swap");
 @import url("fonts.css");
 /* end of starter pack*/
 #search-intro {
@@ -140,6 +140,10 @@ input[type="radio"]:checked + .type {
 .grid-item .author, .grid-item .image-title {
   font-family: Poppins, sans-serif;
   font-size: 12px;
+}
+
+.grid-item .author {
+  font-weight: 400;
 }
 
 .grid-item .image-title {
