--- a/public/css/search.scss
+++ b/public/css/search.scss
@@ -128,6 +128,10 @@ input[type="radio"]:checked + .type {
         font-size: 12px;
     }
 
+    .author{
+        font-weight: 400;
+    }
+
     .image-title{
         font-size: 20px;
     }
