--- a/public/css/welcome.scss
+++ b/public/css/welcome.scss
@@ -328,13 +328,17 @@
         }
     }
 
+    .navbar-bg{
+        background: color(navbar-bg) !important;
+    }
+
     .fp-prev, .fp-next{
         i{
             text-align: center;
             font-size: 15px;
             width: 30px;
             height: 30px;
-            padding-top: 5px;
+            padding-top: 5.5px;
         }
     }
 
